# Grimoire

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: ci.yml  docs.yml
apps/grimoire/: Cargo.toml
apps/grimoire/src/: cli.rs  config.rs  debug.rs  main.rs  state.rs  text_input.rs
apps/peer-gpui/: Cargo.toml
apps/peer-gpui/src/: config.rs  main.rs  state.rs  text_input.rs
crates/grimoire-audio/: Cargo.toml
crates/grimoire-audio/src/: lib.rs
crates/grimoire-core/: Cargo.toml  build.rs
crates/grimoire-core/proto/: grimoire.proto
crates/grimoire-core/src/: community.rs  identity.rs  lib.rs  metrics.rs  node.rs  store.rs
crates/grimoire-core/tests/: availability.rs  identity_recovery.rs  read_state.rs  replication.rs  wan_acceptance.rs
crates/peer-audio/: Cargo.toml
crates/peer-audio/src/: lib.rs
crates/peer-core/: Cargo.toml  build.rs
crates/peer-core/src/: crypto.rs  model.rs  node.rs  store.rs
crates/peer-core/tests/: availability.rs  identity_recovery.rs  read_state.rs  replication.rs  wan_acceptance.rs
docs/: acceptance.md
packaging/nixos/: grimoire
tools/grimoire-cli/: Cargo.toml
tools/grimoire-cli/src/: main.rs
tools/peer-cli/: Cargo.toml
tools/peer-cli/src/: main.rs
