[workspace]
members = [
  "apps/grimoire",
  "crates/grimoire-audio",
  "crates/grimoire-core",
]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.97"

[workspace.dependencies]
anyhow = "1.0"
argon2 = { version = "=0.5.3", default-features = false, features = [ "alloc", "zeroize" ] }
clap = { version = "4.5", features = [ "derive" ] }
cpal = "=0.18.1"
dirs = "6.0"
ed25519-dalek = "=3.0.0-rc.0"
blake3 = "1.8"
chacha20poly1305 = { version = "=0.11.0", default-features = false, features = [ "alloc", "zeroize" ] }
hpke = { version = "=0.13.0", default-features = false, features = [ "alloc", "x25519" ] }
gpui = "=0.2.2"
iroh = "=1.0.2"
opus = "=0.3.1"
prost = "=0.14.4"
rand = "0.9"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = [ "fs", "macros", "rt-multi-thread", "signal", "sync", "time" ] }
tracing = "0.1"
turso = "=0.6.1"
zeroize = "=1.9.0"

[workspace.lints.rust]
unsafe_code = "forbid"
