[package]
name = "grimoire"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
dirs.workspace = true
gpui.workspace = true
grimoire-audio = { path = "../../crates/grimoire-audio" }
grimoire-core = { path = "../../crates/grimoire-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
tempfile = "3.20"

[lints]
workspace = true
