[package]
name = "grimoire-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cpal.workspace = true
opus.workspace = true
grimoire-core = { path = "../grimoire-core" }
rand.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
