[package]
name = "peer-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
argon2.workspace = true
ed25519-dalek.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
hpke.workspace = true
iroh.workspace = true
prost.workspace = true
rand.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
turso.workspace = true
zeroize.workspace = true

[build-dependencies]
prost-build = "=0.14.4"

[dev-dependencies]
tempfile = "3.20"

[lints]
workspace = true
