[package]
name = "grimoire-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
grimoire-audio = { path = "../../crates/grimoire-audio" }
grimoire-core = { path = "../../crates/grimoire-core" }
rand.workspace = true
tokio.workspace = true

[lints]
workspace = true
